fix. application header mobile layout bug

--- a/less/agency.less
+++ b/less/agency.less
@@ -1550,13 +1550,14 @@ footer.white-footer, footer.white-footer a{
     .apply-btn {
         position: absolute;
         top: 433px;
-        right: 98px;
+        left:70%;
         img {
             width : 100px;
         }
         span {
-            position: relative;
-            left: -81px;
+            position: absolute;
+            top: 36px;
+            left: 18px;
             color: #fff;
             font-weight: bold;
             font-size: 1.2em;
@@ -1593,13 +1594,13 @@ footer.white-footer, footer.white-footer a{
         }
         .apply-btn {
             top: 260px;
-            right: -24px;
             img {
                 width : 80px;
             }
             span {
-                position: relative;
-                left: -70px;
+                position: absolute;
+                top: 28px;
+                left: 9px;
                 color: #fff;
                 font-weight: bold;
                 font-size: 1.2em;
@@ -1608,5 +1609,41 @@ footer.white-footer, footer.white-footer a{
     }
     .jumbotron+.container {
         margin-top: 0px;
+    }
+}
+
+
+
+@media(max-width:480px) {
+    .jumbotron {
+       .presentaion-left {
+            max-width: 400px;
+            margin-left: 2%;
+        }
+        .wrap-text {
+            margin-left: 11px;
+            margin-top: 32px;
+            float: left;
+            max-width: 70%;
+            h3 {
+                font-size: 16px;
+            }
+            p {
+                line-height: 1.2em;
+                font-size: 18px;
+            }
+        }
+        .presentaion-left img.level-logo {
+            max-width: 80px;
+            width:25%;
+            margin-top: 43px;
+            float: left;
+        }
+        .apply-btn {
+            top: 211px;
+            left:60%;
+        }
+        height: 250px;
+        padding-top: 15px;
     }
 }
